<resources>
    <string name="app_name">WeatherApp</string>
    <string name="temp_text_api">Test Weather Api</string>
    <string name="temp_text_bttn">Get</string>
    <string name="temp_text_date_time">20.07.2022 12:00</string>
    <string name="temp_text_date">20.07.2022</string>
    <string name="temp_text_city">Gotem City</string>
    <string name="temp_text_temp_c">20°C</string>
    <string name="temp_text_slash">/</string>
    <string name="temp_text_temp_f">70°F</string>
    <string name="temp_text_condition">Sunny</string>
    <string name="temp_text_wind">10.0 km/h - 6.0 ml/h</string>
    <string name="temp_text_maxmin_temp_c">35°C/12°C</string>
    <string name="temp_text_maxmin_temp_f">85°F/61°F</string>
    <string name="temp_text_hours">Hours</string>
    <string name="temp_text_days">Days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_blank_fragment">TEST blank fragment</string>
    <string name="test_blank_fragment_hours">TEST blank fragment Hours</string>
    <string name="test_blank_fragment_days">TEST blank fragment Days</string>
</resources>