<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.5"
    tools:context=".fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_blank_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/imgVwBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/sky_clouds_sun_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/my_light_superblue_transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwDataTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo_tamma"
                android:text="@string/temp_text_data"
                android:textColor="@color/my_limon"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgVwIconWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txVwCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_tamma"
                android:text="@string/temp_text_city"
                android:textColor="@color/my_limon"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVwIconWeather" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txVwCity">

                <TextView
                    android:id="@+id/txVwCurrentTempC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/temp_text_temp_c"
                    android:textColor="@color/my_orange"
                    android:textSize="80sp" />

                <TextView
                    android:id="@+id/txVwSlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/temp_text_slash"
                    android:textColor="@color/my_beige"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/txVwCurrentTempF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/temp_text_temp_f"
                    android:textColor="@color/my_pink"
                    android:textSize="80sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/txVwCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/baloo_tamma"
                    android:paddingTop="5dp"
                    android:text="@string/temp_text_condition"
                    android:textColor="@color/my_limon"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0"
                    android:text="@string/temp_text_wind"
                    android:textColor="@color/my_limon"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <ImageButton
                    android:id="@+id/imgBttnSearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/ic_search"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/txVwMaxMinTempC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_tamma"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/temp_text_maxmin_temp_c"
                    android:textColor="@color/my_orange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txVwMaxMinTempF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_tamma"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/temp_text_maxmin_temp_f"
                    android:textColor="@color/my_pink"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgBttnSync"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/ic_sync"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>